# gpui_media

./: .gitignore  Cargo.toml  README.md  project.md
certs/: proxy_ca.pem
crates/dependency_check/: Cargo.toml
crates/dependency_check/src/: gui.rs  main.rs  platform.rs
docs/superpowers/plans/: 2026-06-23-music-player-playlist-ui.md
src/: main.rs  state.rs
src/com/: draggable_list.rs  mod.rs  request.rs  resizable_panel.rs  window.rs
src/component/: color.rs  home.rs  load_local_music_page.rs  mod.rs  music_player.rs  music_recommend.rs  recommend_page.rs  resizable_panel.rs  search_page.rs  video_player.rs  window.rs
src/component/music_page/: mod.rs
src/component/music_player/: control.rs  mod.rs  ui.rs
src/component/template_page/: entity.rs  html.rs  mod.rs
src/component/video_page/: mod.rs  recommend.rs  search.rs  ui.rs
src/component/video_player/: control.rs  mod.rs  ui.rs
src/drive/: dependency_check.rs  mod.rs
src/drive/music_player/: control.rs  core.rs  mod.rs  ui.rs
src/drive/video_player/: control.rs  core.rs  mod.rs  ui.rs
src/entity/: mod.rs
src/gui/: home.rs  mod.rs
src/gui/music_page/: mod.rs
src/gui/video_page/: mod.rs
src/music_platform/: mod.rs
src/music_platform/_90svip/: entity.rs  mod.rs  recommend.rs  sign.rs
src/music_platform/bilibili/: a.js  entity.rs  mod.rs  recommend.rs  sign.js  sign.rs
src/music_platform/dtwav_music/: mod.rs  recommend.rs  search.rs
src/music_platform/kugou_music/: entity.rs  mod.rs  recommend.rs  sign.rs
src/music_platform/kuwo_music/: mod.rs  recommend.rs  sign.js  sign.rs
src/music_platform/uzz/: mod.rs  recommend.rs
src/music_platform/xmwav_music/: hot.rs  mod.rs  recommend.rs
src/video_platform/: mod.rs
src/video_platform/ffzy5/: search.rs
src/video_platform/haohuazy/: search.rs
src/video_platform/hongniuziyuan/: search.rs
src/video_platform/jszy333/: search.rs
src/video_platform/renren/: mod.rs  recommend.rs
src/video_platform/ryzyw/: search.rs
src/video_platform/ukuzy0/: search.rs
src/video_platform/youzisp/: mod.rs  recommend.rs
