[package]
name = "gpui_medio"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/dependency_check"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"


[[bin]]
name = "gpui-medio"
path = "crates/dependency_check/src/main.rs"

[[bin]]
name = "gui"
path = "src/main.rs"





[profile.release]
debug = false
strip = "symbols"


[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
reqwest_client.workspace = true
gpui-component.workspace = true
log.workspace = true
chrono.workspace = true
fern.workspace = true
serde.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
regex.workspace = true
uuid.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-video.workspace = true
image.workspace = true
scraper.workspace = true

[workspace.dependencies]
# https://github.com/longbridge/gpui-component/blob/main/Cargo.toml
gpui = {git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"}
gpui_platform = {git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe"}
reqwest_client = {git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", package = "reqwest_client"}
gpui-component = {git = "https://github.com/longbridge/gpui-component"}

log = {version = "0.4.29"}
chrono = {version = "0.4.43", features = ["default"]}
fern = "0.7.1"
serde = "1.0.228"
anyhow = "1.0.100"
reqwest = { version = "0.13.1", features = ["gzip", "json", "multipart", "form", "stream"] }
tokio = {version = "1.49.0", features = ["full"]}
futures-util="0.3.31"

serde_json = "1.0.149"
rust-embed = "8.11.0"
regex = "1.12.3"
uuid = { version = "1.22.0", features = ["v4"] }
gstreamer = "0.25.1"
gstreamer-app = "0.25.0"
gstreamer-video = "0.25.0"
image = "0.25.8"
scraper= "0.27.0"
